--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,12 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   '#' %></li>
         <li><%= link_to "About",   '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <% if admin_signed_in? %>
+          <li><%= link_to("log out", destroy_admin_session_path, :method => :delete) %></li>
+        <% else %>
+          <li><%= link_to("sign up", new_admin_registration_path) %></li>
+          <li><%= link_to("log in", new_admin_session_path) %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
