--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,8 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-
+<% if admin_signed_in? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Destroy', post_path, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<%= link_to 'Destroy', post_path, method: :delete, data: { confirm: 'Are you sure?' } %>|
+<% end %>
 <%= link_to 'Back', posts_path %>
