--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,15 @@
     <%= link_to "MY BLOG", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   '#' %></li>
+        <li><%= link_to "Home",  static_pages_home_path %></li>
         <li><%= link_to "About",   '#' %></li>
         <% if admin_signed_in? %>
           <li><%= link_to("New post", new_post_path) %></li>
+
+
           <li><%= link_to("Log out", destroy_admin_session_path, :method => :delete) %></li>
+
+
         <% else %>
           <li><%= link_to("Sign up", new_admin_registration_path) %></li>
           <li><%= link_to("Log in", new_admin_session_path) %></li>
