--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-<% if admin_signed_in? %>
+<% if admin_signed_in? && current_admin.id == @post.admin_id %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Destroy', post_path, method: :delete, data: { confirm: 'Are you sure?' } %>|
 <% end %>
