improve view helper and change _header _footer content

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a>MY BLOG</a>
+    <a>BLOGS</a>
     by <a href="https://www.facebook.com/kunche.ni">KunCheNI</a>
   </small>
   <nav>
