--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,52 @@
-<!--<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
--->
-  <%# help_for_delop_admin %>
-
+<!--
 <% @posts.each do |post| %>
 	<div class="post_wrapper">
 		<h2 class="title"><%="標題"%><br><%= link_to post.title, post %></h2>
 		<p class="date"><%= "創立:" + post.created_at.strftime("%B %d, %Y") %>
-                    <br><%="作者:" + fine_name_by_admin_id(post.admin_id)%></p>
+                    <br><%="作者:" + find_name_by_admin_id(post.admin_id)%></p>
 	</div>
 <% end %>
+-->
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>
+							編號
+						</th>
+						<th>
+							標題
+						</th>
+						<th>
+							創立時間
+						</th>
+						<th>
+							作者
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @posts.each do |post| %>
+					<tr class="active" >
+						<td>
+							1
+						</td>
+						<td>
+							<p><%= link_to post.title, post %></p>
+						</td>
+						<td>
+							<p><%= post.created_at.strftime("%B %d, %Y") %>
+						</td>
+						<td>
+							<p><%= find_name_by_admin_id(post.admin_id) %></p>
+						</td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
