--- a/app/views/posts/show_current_admin.html.erb
+++ b/app/views/posts/show_current_admin.html.erb
@@ -1,7 +1,51 @@
+<!--
 <% @posts.each do |post| %>
 	<div class="post_wrapper">
 		<h2 class="title"><%="標題"%><br><%= link_to post.title, post %></h2>
 		<p class="date"><%= "創立:" + post.created_at.strftime("%B %d, %Y") %>
-                    <br><%="作者:" + fine_name_by_admin_id(post.admin_id)%></p>
+                    <br><%="作者:" + find_name_by_admin_id(post.admin_id)%></p>
 	</div>
 <% end %>
+-->
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>
+							編號
+						</th>
+						<th>
+							標題
+						</th>
+						<th>
+							創立時間
+						</th>
+						<th>
+							作者
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @posts.each do |post| %>
+					<tr class="active" >
+						<td>
+							1
+						</td>
+						<td>
+							<p><%= link_to post.title, post %></p>
+						</td>
+						<td>
+							<p><%= post.created_at.strftime("%B %d, %Y") %>
+						</td>
+						<td>
+							<p><%= find_name_by_admin_id(post.admin_id) %></p>
+						</td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
